# WalrasQuant

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  latexmkrc  pyproject.toml
.claude/agent-memory/code-reviewer/: MEMORY.md
.claude/agents/: code-reviewer.md
.claude/commands/: check-stale.md  migrate.md  release.md
.github/workflows/: ci.yml
.opencode/commands/: release.md
docs/: pyproject.toml
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: aggregation.rst  config.rst  constants.rst  engine.rst  error.rst  index.rst  indicator.rst  push.rst  schema.rst  strategy.rst
docs/source/api/backends/: db.rst  db_postgresql.rst  db_sqlite.rst  index.rst
docs/source/api/base/: api_client.rst  connector.rst  ems.rst  exchange.rst  index.rst  oms.rst  retry.rst  sms.rst  ws_client.rst
docs/source/api/core/: cache.rst  connection.rst  entity.rst  index.rst  nautilius_core.rst  registry.rst
docs/source/api/exchange/: base_factory.rst  index.rst  registry.rst
docs/source/api/exchange/binance/: connector.rst  constants.rst  ems.rst  error.rst  exchange.rst  factory.rst  index.rst  oms.rst  rest_api.rst  schema.rst  websockets.rst
docs/source/api/exchange/bitget/: connector.rst  constants.rst  ems.rst  error.rst  exchange.rst  factory.rst  index.rst  oms.rst  rest_api.rst  schema.rst  websockets.rst
docs/source/api/exchange/bybit/: connector.rst  constants.rst  ems.rst  error.rst  exchange.rst  factory.rst  index.rst  oms.rst  rest_api.rst  schema.rst  websockets.rst
docs/source/api/exchange/hyperliquid/: connector.rst  constants.rst  ems.rst  error.rst  exchange.rst  factory.rst  index.rst  oms.rst  rest_api.rst  schema.rst  websockets.rst
docs/source/api/exchange/okx/: connector.rst  constants.rst  ems.rst  error.rst  exchange.rst  factory.rst  index.rst  oms.rst  rest_api.rst  schema.rst  websockets.rst
docs/source/api/execution/: algorithm.rst  config.rst  constants.rst  index.rst  schema.rst
docs/source/api/execution/algorithms/: twap.rst
docs/source/api/tools/: index.rst  pm2_wrapper.rst
docs/source/api/web/: app.rst  index.rst  server.rst
docs/source/concepts/: cache.rst  index.rst  instruments.rst  orders.rst  strategies.rst
docs/source/exchange/: binance.rst  bitget.rst  bybit.rst  hyperliquid.rst  index.rst  okx.rst
docs/source/quickstart/: buyandsell.rst  custom_signal.rst  index.rst  indicator.rst  keys.rst  process.rst
nexustrader/: aggregation.py  config.py  engine.py  indicator.py  push.py  schema.py  strategy.py
nexustrader/base/: api_client.py  connector.py  ems.py  exchange.py  oms.py  retry.py  sms.py  ws_client.py
nexustrader/cli/monitor/: state_exporter.py
nexustrader/core/: cache.py  connection.py  entity.py  nautilius_core.py  registry.py
nexustrader/exchange/: base_factory.py
nexustrader/exchange/binance/: connector.py  constants.py  ems.py  error.py  factory.py  oms.py  rest_api.py  schema.py  (+1 more)
nexustrader/execution/: __init__.py  algorithm.py  constants.py  schema.py
src/nexusquant/: __init__.py  aggregation.py  config.py  constants.py  engine.py  error.py  indicator.py  schema.py  strategy.py
src/walrasquant/: __init__.py  aggregation.py  config.py  constants.py  engine.py  indicator.py  schema.py  strategy.py
strategy/binance/: buy_and_sell.py  buy_and_sell_pm.py  buy_and_sell_usdm.py  cancel_all_orders.py  custum_signal.py  mock_trading.py  modify_order.py  multi_conn.py  place_batch_orders.py  request_klines.py  send_alert.py  set_params.py  subscribe_bookl1.py  subscribe_funding_rate.py  subscribe_klines.py  tp_sl_order.py  use_params.py  vol_cal.py  web_callback.py
strategy/bitget/: buy_and_sell.py  subscribe_bookl1.py
strategy/bybit/: buy_and_sell.py  cancel_all_orders.py  custom_signal.py  demo_indicator.py  lp_hedge.py  modify_order.py  place_batch_orders.py  request_klines.py  subscribe_bookl2.py  subscribe_funding_rate.py  subscribe_klines.py  tp_and_sl.py  warmup_moving_average_example.py
strategy/hyperliquid/: buy_and_sell.py  place_batch_orders.py  subscribe_bookl1.py
strategy/okx/: buy_and_cancel.py  cancel_all_orders.py  custom_signal.py  modify_order.py  place_batch_orders.py  place_twap_order.py  ratio.py  request_klines.py  simple_mm.py  subscribe_bookl2.py  subscribe_funding_rate.py  subscribe_klines.py  tp_and_sl.py
test/base/: conftest.py  test_execution_ems.py  test_mock_linear_connector.py
test/core/: conftest.py  test_cache.py  test_entity.py  test_redis_utils.py  test_registry.py
test/web/: test_strategy_web_app.py
(+209 files in other folders)
