[project]
name = "nexustrader"
version = "0.2.37"
description = "fastest python trading bot"
authors = [
    {name = "River-Shi",email = "nachuan.shi.quant@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=1.26.4,<2.2.1)",
    "pyinstrument (>=5.0.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "streamz (>=0.6.4,<0.7.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "cython (>=3.0.11,<4.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "zmq (>=0.0.0,<0.0.1)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "returns (>=0.24.0,<0.25.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "uvloop>=0.21.0",
    "throttled-py>=2.2.3",
    "ccxt>=4.5.22",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "nautilus-trader>=1.220.0",
    "textual>=0.85.0",
    "click>=8.1.0",
    "pycryptodome>=3.23.0",
    "eth-account>=0.13.7",
    "typing-extensions>=4.12.2",
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "curl-cffi>=0.13.0",
    "picows>=1.10.2",
    "dynaconf[redis]>=3.2.12",
    "nexuslog>=0.4.1",
]

[project.scripts]
nexustrader-cli = "nexustrader.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
