[project]
name = "walrasquant-docs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinxcontrib-svg2pdfconverter",
    "msgspec",
    "recommonmark",
]

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "source", "build"]
pythonCommand = ["${workspaceFolder}/.venv/bin/python"]
confDir = "${workspaceFolder}/docs/source"
